Fraction Matcher: Exclude "interleaved L shapes" for denominator > 4
Fraction Matcher: Moved mixed number elements closer together
# 0.00.86 (65170) Jun 16, 2012
Fraction Matcher: Fixed: Sometimes when pressing "show answer", a fraction from the top score cell animates down to the scale
Fraction Matcher: Fixed: Spacing between shape graphics for fractions < 1 is sometimes too small
Fraction Matcher: Increased the size of the whole number in mixed fractions
Fraction Matcher: Added sim sharing messages
Fraction Matcher: Internationalized
# 0.00.85 (65145) Jun 15, 2012
Fraction Matcher: Only include levels 7-8 in the standalone Fraction Matcher, not in the Fractions Intro sim
Fraction Matcher: Added improper fractions to levels 7-8
# 0.00.84 (65129) Jun 15, 2012
Fraction Matcher: Added levels 7-8
Fraction Matcher: Vertical bars fill from the left
Fraction Matcher: Rewrote level creation algorithm
Fraction Matcher: Made sound button and timer buttons keep the hand cursor when pressed in
Fraction Matcher: Made sound button change icon when pressed in
Fraction Matcher: Made sound and timer buttons turn green when pressed in
# 0.00.83 (65090) Jun 15, 2012
Fraction Matcher: Changed pattern on startup screen
Fraction Matcher: Reworded buttons
# 0.00.82 (64985) Jun 12, 2012
Removed dependency on xstream
Fraction Matcher: Wired up new startup/level selection screen
Fraction Matcher: Added new startup/level selection screen
Fraction Matcher: Fixed: Red wasn't appearing correctly for fractions > 1
Build a fraction tab: Fixed: scoring cells weren't flashing red for level 1
# 0.00.81 (64935) Jun 11, 2012
Fraction Matcher: Added red as a representation color
Fraction Matcher: Always show the "check answer" button on the left side
Fraction Matcher: Made the big yellow equals sign have square corners instead of rounded
Fraction Matcher: Fixed: For fractions > 1, sometimes the bar on the number line uses green instead of the representation color