@@ -1,3 +1,4 @@
+Fraction Matcher: fixed randomization scheme for later levels
 Fraction Matcher: Exclude "interleaved L shapes" for denominator > 4
 Fraction Matcher: Moved mixed number elements closer together
 # 0.00.86 (65170) Jun 16, 2012
